# shadowchain

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.remote.yml  docker-compose.yml  nginx.conf  package.json  presentation.md  tsconfig.json
backend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
backend/src/api/: index.ts
backend/src/api/middleware/: error-handler.ts
backend/src/api/routes/: auth.ts  health.ts  shadow.ts  transactions.ts
backend/src/config/: index.ts
backend/src/db/migrations/: 001_create_pending_shadow_items.sql  002_create_user_keys.sql
backend/src/services/: crypto.service.ts  database.service.ts  fetcher.service.ts  github.service.ts  ipfs.service.ts  oauth.service.ts  substrate.service.ts  twitter.service.ts
backend/src/utils/: logger.ts
docs/: arch.md
frontend/: .env.example  Dockerfile  README-MOCKMODE.md  THEME_INTEGRATION_GUIDE.md  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  index.tsx  react-app-env.d.ts
frontend/src/components/: AccountConnections.tsx  AccountSelector.tsx  AccountSwitcher.tsx  BlockchainShadowItems.tsx  ChainVisualizer.tsx  EncryptionKeySetup.tsx  Layout.tsx  RepositoryList.tsx
frontend/src/components/ui/: text-rewind.tsx
frontend/src/config/: environment.ts
frontend/src/pages/: Authorize.tsx  ConnectWallet.tsx  Dashboard.tsx  Landing.tsx  OAuthCallback.tsx
frontend/src/services/: crypto.ts  oauth.ts  polkadot.ts
frontend/src/store/: wallet.ts
frontend/src/styles/: shadowchain.css
infra/terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/networking/: main.tf  outputs.tf  variables.tf
parachain/: Cargo.toml  Dockerfile
parachain/node/: Cargo.toml
parachain/pallets/shadow/: Cargo.toml
parachain/pallets/shadow/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
parachain/runtime/: Cargo.toml
parachain/runtime/src/: lib.rs
parachain/runtime/src/configs/: mod.rs
public/: index.html
scripts/: demo.sh  deploy_aws.sh  dev_local.sh  run_e2e_local.sh
shared-crypto/: .npmignore  build.sh  jest.config.js  package-lock.json  package.json  tsconfig.json
shared-crypto/src/: index.ts
shared-crypto/src/__tests__/: crypto.test.ts
src/: index.tsx
src/components/: AccountConnections.tsx  ActivityFeed.tsx  BlockchainShadowItems.tsx  DottedSurface.tsx  IdentityCard.tsx  ThemeToggle.tsx  WalletInfo.tsx
src/components/ui/: text-scramble.tsx
src/contexts/: ThemeContext.tsx
src/pages/: Landing.tsx  OAuthCallback.tsx
src/services/: oauth.ts  transactions.ts
src/styles/: shadowchain.css
substrate-node/: Cargo.toml  Dockerfile  README.md  zombienet.toml
substrate-node/node/: Cargo.toml
substrate-node/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
substrate-node/pallets/shadow/: Cargo.toml
substrate-node/pallets/shadow/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
substrate-node/runtime/: Cargo.toml  build.rs
substrate-node/runtime/src/: apis.rs  benchmarks.rs  configs.rs  genesis_config_presets.rs  lib.rs
substrate-node/runtime/src/configs/: mod.rs  xcm_config.rs
substrate-node/runtime/src/weights/: mod.rs
substrate-node/src/: lib.rs
tests/e2e/: package.json  playwright.config.ts
tests/e2e/specs/: 01-wallet-connection.spec.ts  02-shadow-items.spec.ts
