[package]
name = "shadow-chain-node"
description = "Shadow Chain parachain node - mirrors Web2 activity to Polkadot"
version = "0.1.0"
license = "MIT"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
clap = { features = ["derive"], workspace = true }
color-print = { workspace = true }
docify = { workspace = true }
futures = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
log = { workspace = true, default-features = true }
shadow-chain-runtime = { path = "../runtime", default-features = false }
polkadot-sdk = { workspace = true, features = ["node"] }
prometheus-endpoint.default-features = true
prometheus-endpoint.workspace = true
serde = { features = ["derive"], workspace = true, default-features = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"log/std",
	"shadow-chain-runtime/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"shadow-chain-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"shadow-chain-runtime/try-runtime",
	"polkadot-sdk/try-runtime",
]
